--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,7 +87,7 @@ jobs:
           python -m pip install scons
           scons --version
 
-      - name: Checkout project
+      - name: Checkout demo
         uses: actions/checkout@v2
         with:
           submodules: recursive
@@ -114,12 +114,12 @@ jobs:
         #          SCONS_CACHE_LIMIT: 8192
         run: |
           scons target='${{ matrix.target }}' platform='${{ matrix.platform }}' arch='${{ matrix.arch }}' -j2
-          ls -l project/addons/*/bin/
+          ls -l demo/bin/
 
       - name: Copy extra files to addon
         shell: sh
         run: |
-          for addon in ${{ github.workspace }}/project/addons/*/; do
+          for addon in ${{ github.workspace }}/demo/addons/*/; do
             cp --no-clobber '${{ github.workspace }}/README.md' '${{ github.workspace }}/LICENSE' "$addon"
           done
 
@@ -128,4 +128,4 @@ jobs:
         with:
           name: ${{ github.event.repository.name }}
           path: |
-            ${{ github.workspace }}/project/
+            ${{ github.workspace }}/demo/
