--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,30 +18,30 @@ jobs:
             target: template_debug
             platform: linux
             arch: x86_64
-#          - identifier: linux-release
-#            name: 🐧 Linux Release
-#            runner: ubuntu-20.04
-#            target: template_release
-#            platform: linux
-#            arch: x86_64
-#          - identifier: windows-debug
-#            name: 🪟 Windows Debug
-#            runner: ubuntu-20.04
-#            target: template_debug
-#            platform: windows
-#            arch: x86_64
-#          - identifier: windows-release
-#            name: 🪟 Windows Release
-#            runner: ubuntu-20.04
-#            target: template_release
-#            platform: windows
-#            arch: x86_64
-#          - identifier: android-release
-#            name: 🪟 Android Release
-#            runner: ubuntu-20.04
-#            target: template_release
-#            platform: android
-#            arch: arm64
+          - identifier: linux-release
+            name: 🐧 Linux Release
+            runner: ubuntu-20.04
+            target: template_release
+            platform: linux
+            arch: x86_64
+          - identifier: windows-debug
+            name: 🪟 Windows Debug
+            runner: ubuntu-20.04
+            target: template_debug
+            platform: windows
+            arch: x86_64
+          - identifier: windows-release
+            name: 🪟 Windows Release
+            runner: ubuntu-20.04
+            target: template_release
+            platform: windows
+            arch: x86_64
+          - identifier: android-release
+            name: 🪟 Android Release
+            runner: ubuntu-20.04
+            target: template_release
+            platform: android
+            arch: arm64
 
     steps:
       - name: (Windows) Install mingw64
@@ -79,6 +79,8 @@ jobs:
 
       - name: Install Python
         uses: actions/setup-python@v4
+        with:
+          python-version: '3.11' 
 
       - name: Install SCons
         shell: bash
