--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,7 @@ name: 🛠️ Builds
 on:
   push:
   pull_request:
+    types: [opened]
   workflow_dispatch:
 
 jobs:
@@ -37,7 +38,7 @@ jobs:
             platform: windows
             arch: x86_64
           - identifier: android-release
-            name: 🪟 Android Release
+            name: 🤖 Android Release
             runner: ubuntu-20.04
             target: template_release
             platform: android
