--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,32 +14,32 @@ jobs:
       matrix:
         include:
           - identifier: linux-debug
-            name: 🐧 Linux Debug
-            runner: ubuntu-20.04
+            name: 🐧 Linux Debug 🪲
+            runner: self-hosted
             target: template_debug
             platform: linux
             arch: x86_64
           - identifier: linux-release
-            name: 🐧 Linux Release
-            runner: ubuntu-20.04
+            name: 🐧 Linux Release 🚀
+            runner: self-hosted
             target: template_release
             platform: linux
             arch: x86_64
           - identifier: windows-debug
-            name: 🪟 Windows Debug
-            runner: ubuntu-20.04
+            name: 🪟 Windows Debug 🪲
+            runner: self-hosted
             target: template_debug
             platform: windows
             arch: x86_64
           - identifier: windows-release
-            name: 🪟 Windows Release
-            runner: ubuntu-20.04
+            name: 🪟 Windows Release 🚀
+            runner: self-hosted
             target: template_release
             platform: windows
             arch: x86_64
           - identifier: android-release
-            name: 🤖 Android Release
-            runner: ubuntu-20.04
+            name: 🤖 Android Release 🚀
+            runner: self-hosted
             target: template_release
             platform: android
             arch: arm64
