--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         include:
           - identifier: linux-debug
-            name: 🐧 Linux Debug 🪲
+            name: 🐧 Linux Debug 🪲🎄
             runner: self-hosted
             target: template_debug
             platform: linux
