--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,45 +1,47 @@
 name: 🛠️ Builds
 on:
   push:
-  pull_request:
-    types: [opened]
   workflow_dispatch:
 
 jobs:
+  run_tests:
+    name: 🧪 Tests
+    runs-on: ubuntu-22.04
   build:
-    runs-on: ${{ matrix.runner }}
     name: ${{ matrix.name }}
+    runs-on: ${{ matrix.runner }}
+    needs: run_tests
     strategy:
       fail-fast: false
       matrix:
         include:
           - identifier: linux-debug
             name: 🐧 Linux Debug 🪲
-            runner: self-hosted
+            runner: ubuntu-22.04
             target: template_debug
             platform: linux
             arch: x86_64
           - identifier: linux-release
             name: 🐧 Linux Release 🚀
-            runner: self-hosted
+            runner: ubuntu-22.04
             target: template_release
             platform: linux
             arch: x86_64
           - identifier: windows-debug
             name: 🪟 Windows Debug 🪲
-            runner: self-hosted
+            runner: ubuntu-22.04
             target: template_debug
             platform: windows
             arch: x86_64
           - identifier: windows-release
             name: 🪟 Windows Release 🚀
-            runner: self-hosted
+            runner: ubuntu-22.04
             target: template_release
             platform: windows
             arch: x86_64
           - identifier: android-release
             name: 🤖 Android Release 🚀
-            runner: self-hosted
+            runner: ubuntu-22.04
             target: template_release
             platform: android
             arch: arm64
