--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,16 +1,10 @@
 name: 🛠️ Builds
-on:
-  push:
-  workflow_dispatch:
-
+on: push
+#  workflow_dispatch:
 jobs:
-  run_tests:
-    name: 🧪 Tests
-    runs-on: ubuntu-22.04
   build:
     name: ${{ matrix.name }}
     runs-on: ${{ matrix.runner }}
-    needs: run_tests
     strategy:
       fail-fast: false
       matrix:
@@ -33,6 +27,12 @@ jobs:
             target: template_debug
             platform: windows
             arch: x86_64
+          - identifier: windows-debug
+            name: 🪟 Windows Debug 🪲
+            runner: ubuntu-22.04
+            target: template_debug
+            platform: windows
+            arch: x86_64
           - identifier: windows-release
             name: 🪟 Windows Release 🚀
             runner: ubuntu-22.04
@@ -45,13 +45,13 @@ jobs:
             target: template_release
             platform: android
             arch: arm64
-
     steps:
       - name: (Windows) Install mingw64
         if: ${{ startsWith(matrix.identifier, 'windows-') }}
         shell: sh
         run: |
-          sudo apt-get install mingw-w64
+          sudo apt-get -y update
+          sudo apt-get install -y mingw-w64
           sudo update-alternatives --set x86_64-w64-mingw32-gcc /usr/bin/x86_64-w64-mingw32-gcc-posix
           sudo update-alternatives --set x86_64-w64-mingw32-g++ /usr/bin/x86_64-w64-mingw32-g++-posix
 
@@ -83,7 +83,7 @@ jobs:
       - name: Install Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11' 
+          python-version: '3.11'
 
       - name: Install SCons
         shell: bash
@@ -103,6 +103,7 @@ jobs:
         with:
           path: |
             ${{ github.workspace }}/.scons-cache/
+            ${{ github.workspace }}/tests/.scons-cache/
             ${{ github.workspace }}/**/.sconsign.dblite
             ${{ github.workspace }}/godot-cpp/gen/
           key: ${{ matrix.identifier }}-${{ github.ref }}-${{ github.sha }}
@@ -117,8 +118,17 @@ jobs:
           SCONS_CACHE: '${{ github.workspace }}/.scons-cache/'
           SCONS_CACHE_LIMIT: 8192
         run: |
-          scons target='${{ matrix.target }}' platform='${{ matrix.platform }}' arch='${{ matrix.arch }}' -j2
-          ls -l demo/bin/
+          cd tests
+          scons build_env=development debug_symbols=yes optimize=debug disable_exceptions=false target='${{ matrix.target }}' platform='${{ matrix.platform }}' arch='${{ matrix.arch }}' -j8
+
+      - name: Run tests
+        shell: sh
+        run: |
+          cd tests
+          wget https://github.com/godotengine/godot/releases/download/4.2.1-stable/Godot_v4.2.1-stable_linux.x86_64.zip -O godot.zip
+          unzip godot.zip
+          chmod +x Godot_v4.2.1-stable_linux.x86_64
+          ./Godot_v4.2.1-stable_linux.x86_64 --verbose --headless --script run_tests.gd --path ./demo
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
