--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,5 @@
 name: 🛠️ Builds
 on: push
-#  workflow_dispatch:
 jobs:
   build:
     name: ${{ matrix.name }}
@@ -20,12 +19,6 @@ jobs:
             runner: ubuntu-22.04
             target: template_release
             platform: linux
-            arch: x86_64
-          - identifier: windows-debug
-            name: 🪟 Windows Debug 🪲
-            runner: ubuntu-22.04
-            target: template_debug
-            platform: windows
             arch: x86_64
           - identifier: windows-debug
             name: 🪟 Windows Debug 🪲
@@ -85,12 +78,24 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install SCons
+      - name: Install required libraries
         shell: bash
         run: |
-          python -c "import sys; print(sys.version)"
-          python -m pip install scons
-          scons --version
+          sudo apt-get -y update
+          sudo apt-get -y install \
+            build-essential \
+            scons \
+            pkg-config \
+            libx11-dev \
+            libxcursor-dev \
+            libxinerama-dev \
+            libgl1-mesa-dev \
+            libglu-dev \
+            libasound2-dev \
+            libpulse-dev \
+            libudev-dev \
+            libxi-dev \
+            libxrandr-dev
 
       - name: Checkout demo
         uses: actions/checkout@v4
@@ -124,11 +129,10 @@ jobs:
       - name: Run tests
         shell: sh
         run: |
-          cd tests
           wget https://github.com/godotengine/godot/releases/download/4.2.1-stable/Godot_v4.2.1-stable_linux.x86_64.zip -O godot.zip
           unzip godot.zip
           chmod +x Godot_v4.2.1-stable_linux.x86_64
-          ./Godot_v4.2.1-stable_linux.x86_64 --verbose --headless --script run_tests.gd --path ./demo
+          ./Godot_v4.2.1-stable_linux.x86_64 --headless --verbose --script run_tests.gd --path ./demo
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
