--- a/.gitignore
+++ b/.gitignore
@@ -36,11 +36,13 @@ CMakeLists.txt
 compile_commands.json
 
 # Godot 4+ specific ignores
-demo/.godot
 demo/bin/*
 !demo/bin/voronoi.gdextension
+demo/.godot/*
+!demo/.godot/extension_list.cfg
 
 # Tests project
-/tests/demov/bin/*.dll
-/tests/demov/bin/*.a
-/tests/demo/.godot
+tests/demo/bin/*
+!tests/demo/bin/voronoi.gdextension
+tests/demo/.godot/*
+!tests/demo/.godot/extension_list.cfg
