--- a/tests/SConstruct
+++ b/tests/SConstruct
@@ -10,8 +10,7 @@ env = SConscript("../godot-cpp/SConstruct")
 env.Append(CPPPATH=["src/", "../src/", "../lib/voronoi/src/", "../lib/doctest/doctest/", "../lib/trompeloeil/include/"])
 
 sources = Glob("src/*.cpp") + Glob("src/tests/*.cpp") + Glob("../src/*.cpp") + Glob("../src/godot/*.cpp") \
-          + Glob("../lib/doctest/doctest/parts/*.cpp") #\
-          #+ Glob("../lib/trompeloeil/include/trompeloeil.hpp")  # + Glob("../lib/doctest/doctest/doctest.h")
+          + Glob("../lib/doctest/doctest/parts/*.cpp")
 
 # Include DocTest header
 # env.Append(CPPPATH=["../lib/doctest/doctest/"])
